# patient-encounter-system

./: .bandit  .coverage  .editorconfig  .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: database.py  main.py
src/models/: appointment.py  doctor.py  patient.py
src/schemas/: appointment.py  doctor.py  patient.py
src/services/: appointment_service.py  doctor_service.py  patient_service.py
tests/: conftest.py  test_appointment.py  test_coverage.py  test_doctor.py  test_evaluation.py  test_patient.py
tests/unit/: test_models_schemas.py  test_services.py
